tests/snapshots/aether/aether__aether__fbip_fail_nonfip_call__dump_aether.snap
---
source: tests/aether_cli_snapshots.rs
---
[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • examples/compiler_errors/fbip_fail_nonfip_call.flx
error[E999]: FBIP Contract Failed

@fbip on `bounded` analysis result NotProvable:
- calls indirect or opaque callee `f` whose FBIP behavior is unknown

  examples/compiler_errors/fbip_fail_nonfip_call.flx:10:7
   |
10 | @fbip fn bounded(f, x) {
   |       ^^^^^^^^^^^^^^^^

Hint:
  Annotate only functions whose fresh allocations remain provably bounded.
